<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="crime_title_hint">Enter a title!</string>
    <string name="action_settings">Settings</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crime_title">Crimes</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_title">Hide_Title</string>
    <string name="subtitle">if you see something,say something.</string>
    <string name="title_activity_crime_list">CrimeListActivity</string>
    <string name="title_activity_crime_pager">CrimePagerActivity</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="take">Take</string>
    <string name="crime_suspect_text">Choose Suspect!</string>
    <string name="crime_report_text">Send Crime Report!</string>
    <string name="crime_report">%1$s!
        The Crime was discovered on %2$s. %3$S and %4$s
    </string>
    <string name="crime_report_solved">The Crime is solved!</string>
    <string name="crime_report_unsolved">The Crime is unsolved!</string>
    <string name="crime_report_noSupect">There is no suspect!</string>
    <string name="crime_report_supect">The supect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report!</string>
    <string name="send_report">Send Crime Report Via</string>
    <!--<string name="hello_world">Hello world!</string>-->


<!-- TODO: Remove or change this placeholder text -->

</resources>
